--- a/package.json
+++ b/package.json
@@ -24,34 +24,35 @@
     "test:cleanup": "./docker-start.sh stop"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.4",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.303.0",
+    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "@tanstack/react-query": "^4.24.4",
+    "react-router-dom": "^6.8.0",
     "tailwindcss": "^3.2.4",
-    "lucide-react": "^0.303.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
-    "pg": "^8.8.0",
-    "dotenv": "^16.0.3",
     "ws": "^8.12.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
     "concurrently": "^7.6.0",
+    "jest": "^30.2.0",
     "nodemon": "^2.0.20",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@playwright/test": "^1.40.0",
-    "supertest": "^6.3.3"
+    "postcss": "^8.4.21",
+    "supertest": "^6.3.4",
+    "vite": "^4.1.0",
+    "vitest": "^1.6.1"
   }
 }
